syntax="proto3";

option go_package = "./proto";

package greet_service; 

service GreetService {
    rpc SayHello(NoParam) returns (HelloResponse);

    rpc SayHelloServerStreaming(NameList) returns (stream HelloResponse);

    rpc SayHelloClientStreaming(stream HelloRequest) returns (MessageList);

    rpc SayHelloBidirectionalStreaming(stream HelloRequest) returns (stream HelloResponse);
}

message NoParam {}

message HelloRequest {
    string name = 1;
}

message HelloResponse{
    string message = 1;
}

message NameList {
    repeated string names = 1;
}

message MessageList {
    repeated string messages = 1;
}   